worlds/api.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    run: api
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: public
  selector:
    run: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      run: api
  replicas: 1
  template:
    metadata:
      labels:
        run: api
    spec:
      containers:
      - name: api
        image: anrop/arma-worlds-api
        ports:
          - containerPort: 8080
      restartPolicy: Always
